<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#e0eaf0"
    tools:context=".MyAppPortfolio">

    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/header"
        android:text="@string/nano_degree_apps"
        android:textSize="@dimen/textView_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_margin_sides"
        android:layout_marginRight="@dimen/activity_margin_sides"
        android:background="#f08b47"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spotify"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_margin_sides"
        android:layout_marginRight="@dimen/activity_margin_sides"
        android:background="#f08b47"
        android:text="@string/scores_app"
        android:id="@+id/scores"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scores"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_margin_sides"
        android:layout_marginRight="@dimen/activity_margin_sides"
        android:background="#f08b47"
        android:text="@string/library_app"
        android:id="@+id/library_app"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/library_app"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_margin_sides"
        android:layout_marginRight="@dimen/activity_margin_sides"
        android:background="#f08b47"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_bigger"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/build_bigger"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_margin_sides"
        android:layout_marginRight="@dimen/activity_margin_sides"
        android:background="#f08b47"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xyz_reader"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_margin_sides"
        android:layout_marginRight="@dimen/activity_margin_sides"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:text="@string/my_own_app"
        android:id="@+id/my_own_app"
        />

</RelativeLayout>
